📖 fill system analysis 39-41 + english 10-11

--- a/src/pages/english/theory.mdx
+++ b/src/pages/english/theory.mdx
@@ -73,3 +73,93 @@ The three wireless technologies widely used today are Wi-Fi, cellular and satell
 Internet over Satellite usually allows a user to access the Net via a geostationary satellite that orbits the Earth. As signals must travel long distances from the Earth up to the satellite and back again, it may cause a delay between the request and the answer. However, modern technologies make it possible to minimize this latency. Thus, satellite Internet access can provide high-speed Internet where the conventional cable or DSL is either not available or not functioning well. To get access to the Internet, one needs a satellite dish for two-way (upload and download) data communications and a modem.
 
 A cellular network is a communication network distributed over land areas called "cells". Each cell has at least one fixed-location transceiver, but more commonly, there are three cell sites. These base stations (cell towers) provide a cell with the network coverage, which can be used for transmission of voice and data. A cell typically uses a different set of frequencies from the neighboring cells to avoid interference and provide guaranteed service quality within each cell.
+
+#### 10. Computer languages
+
+**Термины:**
+
+1. Compiler — компилятор;
+2. Assembler — ассемблер;
+3. Interpreter — интерпретатор;
+4. Binary code — двоичный код;
+5. Assembly languages — языки ассемблера, низкоуровневые языки, близкие к ассемблеру;
+6. Low-level language — низкоуровневый язык;
+7. High-level language — высокоуровневый язык;
+8. HyperText Markup Language *(HTML)* — язык разметки гипертекста;
+9. eXtensible Markup Language *(XML)* — расширяемый язык разметки;
+10. Flowchart — блок-схема;
+11. Debugging — отладка;
+12. Search Engine — поисковик;
+13. Uniform Resource Locator *(URL)* — универсальный указатель ресурса;
+14. Domain Name Server *(DNS)* — сервер доменных имен;
+15. Node — узел, устройство подключенное к компьютерной сети;
+16. Search phrases — поисковые фразы;
+17. Source code — исходный код;
+18. Object-Oriented Programming *(OOP)* — объектно-ориентированное программирование;
+
+**Текст по теме:**
+
+Unfortunately for us, computers can't understand spoken English or any other natural language. The only language they can understand directly is machine code, which consists of 1s and 0s (binary code).
+
+However, machine code is too difficult to write. For this reason, we use symbolic languages to communicate instructions to the computer. For example, assembly languages use abbreviations such as ADD, SUB, MUL to represent instructions. The program is then translated into machine code by a piece of software called an assembler. Machine code and assembly languages are called low-level languages because they are closer to the hardware. They are quite complex and restricted to particular machines. To make the programs easier to write, and to overcome the problem of intercommunication between different types of computer, software developers designed high-level languages, which are closer to the English language. Here are some examples.
+
+**FORTRAN (FOR**mula **TRAN**slator) was one of the first high-level programming languages designed by IBM in mid-1950s for scientific and engineering computations. It introduced the concept of high-level abstraction allowing programmers to write a code closer to human language.
+
+**BASIC** (**B**eginner's **A**ll-purpose **S**ymbolic **I**nstruction **C**ode) was designed in the 1960s to be a simple language for beginners. It played a significant role in bringing programming to a wider audience.
+
+**PASCAL** (named after French mathematician Blaise Pascal) became popular in the 1970s. Since that time, it has been widely used for teaching the beginners the fundamentals of programming.
+
+**C** was developed in the 1970s by Dennis Ritchie at Bell Labs. It combined low-level control with high-level abstraction, making it suitable for systems programming.
+
+**C++** is an extension of the **C** which incorporates object-oriented programming. The programmer concentrates on particular things (a piece of text or graphics) and gives each object functions, which can be altered without changing the entire program. This makes programs easier to modify.
+
+**Java** was designed at Sun Microsystems in 1995 to run on the Web. It was widely used to create Java applets – small programs that provide animation, and interactive features to web pages. Java was designed to be platform-independent, using the "Write Once, Run Anywhere" principle. It introduced the concept of the Java Virtual Machine (JVM) and popularized object-oriented programming.
+
+**Python** was created in 1989 and emphasized code readability and simplicity. Python has become popular for various applications, including web development, data analysis, and artificial intelligence. Programs written in high-level languages must be translated into machine code by a compiler or an interpreter. A compiler translates the source code into object code — that is, it converts the entire program into machine code in one go. On the other hand, an interpreter translates the source code line by line as the program is running.
+
+#### 11. Search engines
+
+**Термины:**
+
+1. Crawler-based search engine — автоматическая поисковая система;
+2. Human-powered directory — веб-каталог;
+3. Meta-Search engine — метапоисковая система;
+4. Crawling — сканирование;
+5. Indexing — индексация;
+6. Ranking — ранжирование;
+7. Search index — поисковый индекс;
+8. Search string/box/bar — строка поиска;
+
+**Текст по теме:**
+
+##### Crawler-Based Search Engines
+There are three basic steps that every crawler-based search engine follows before
+displaying search results:
+
+* crawling
+* indexing
+* ranking
+
+###### Crawling
+Crawler-based search engines create their listings automatically by using a special program known as ‘a crawler’ or ‘a spider’ to find new and updated content. Content can vary – it could be a webpage, an image, a video – but disregarding of the format, content is discovered by links. For example, _Googlebot_ starts out by fetching a few webpages and then follows the links on those webpages to find new URLs. Various data mining techniques are used to define which pages should be crawled and the crawling frequency. Every time a web crawler finds a new website through a link, it scans and passes its content for further processing (called indexing).
+
+###### Indexing
+Search engines process and store information they find in an index - a massive database of discovered URLs – to be retrieved later when a user enters a query. Indexing is performed by identifying the words and expressions that best describe the page. The identified words are referred to as keywords and the page is assigned to the identified keywords.
+
+###### Ranking
+Search engines compare the search string with the indexed pages from thevdatabase to provide the content that will best answer the user’s query. The results are ordered from most relevant to least relevant. This ordering of search results by relevancy is known as ranking. There are various algorithms to calculate relevancy, which is why different search engines give different search results for the same search string. These algorithms are constantly evolving to provide users with most relevant search results.
+
+##### Human-Powered Directories
+Human-powered directories depend on human editors to compile their listings. This means that they only show results for content that is added manually.
+
+There are three basic steps to take.
+
+* A short description along with the URL of the website is submitted to the directory for approval.
+* Submitted site is then manually reviewed and added in the appropriate category or rejected for listing.
+* Keywords entered in the search box will be matched with the description of the site. This means that changes made to the content of a webpage are not taken into consideration as it is only the description that matters.
+
+_Yahoo! Directory, Open Directory_ and _LookSmart_ can serve as good examples of web directories. However, automated search engines like _Google_, have neaely wiped out those human-based directories out of the web.
+
+##### Meta-Search Engines
+A meta-search engine does not have a database of indexed pages of its own. Instead, it sends users’ queries to several other search engines and compiles top results from each into one overall list. After redundancy removal, these results are processed, ranked and presented to the user. _Dogpile, MetaCrawler,_ and _SavvySearch_ are a few examples of such meta-search engines.
+
