--- a/src/pages/system-analysis/theory.mdx
+++ b/src/pages/system-analysis/theory.mdx
@@ -457,3 +457,29 @@ sequenceDiagram
 #### 38. Модели и моделирование.
 
 **Модель** – это упрощенное представление реального объекта, процесса или явления, которое сохраняет существенные свойства оригинала и используется для его изучения. Модели могут быть материальными (физическими) или информационными.
+
+#### 39. Диаграммы вариантов использования. Сценарий прецедента.
+
+**Сценарий прецедента** — это конкретная последовательность действий, иллюстрирующая поведение системы в рамках определенного прецедента. Он может быть приведен на диаграмме прецедентов в виде UML-комментария.
+
+Например, сценарий прецедента «Оформление заказа» может выглядеть следующим образом:
+
+1. Покупатель выбирает товары в каталоге.
+2. Покупатель добавляет выбранные товары в корзину.
+3. Покупатель переходит в корзину и нажимает кнопку «Оформить заказ».
+4. Система проверяет наличие товаров в корзине и отображает общую стоимость заказа.
+5. Покупатель подтверждает оформление заказа и выбирает способ доставки.
+6. Система формирует заказ и отправляет его на обработку.
+
+#### 40. Построение моделей систем.
+
+Построение моделей систем – это процесс создания абстрактных представлений реальных систем, которые позволяют анализировать и понимать их структуру, поведение и взаимодействие с окружением. Моделирование систем широко применяется в различных областях, таких как инженерия, бизнес-анализ, экология и медицина.
+
+Основные этапы построения моделей систем:
+
+1. **Определение целей моделирования.** На этом этапе необходимо четко сформулировать, для чего создается модель, какие аспекты системы будут изучаться.
+2. **Сбор данных.** Сбор информации о системе, ее компонентах, связях и поведении. Это может включать в себя как количественные, так и качественные данные.
+3. **Выбор метода моделирования.** Существует множество методов моделирования, каждый из которых подходит для определенных типов систем и задач. Например, для моделирования технических систем часто используются физические модели, а для бизнес-процессов – математические модели.
+4. **Построение модели.** На этом этапе происходит непосредственное создание модели на основе выбранного метода и собранных данных.
+5. **Анализ модели.** Проверка модели на соответствие реальным данным и целям моделирования.
+6. **Использование модели.** Применение модели для решения поставленных задач, например, для прогнозирования поведения системы, оптимизации ее параметров или обучения персонала.
