📖 fill system software 31-44 + add practice block

--- a/src/pages/system-software/theory.mdx
+++ b/src/pages/system-software/theory.mdx
@@ -3,6 +3,8 @@ layout: ../../layouts/TheoryLayout.astro
 title: Системное программное обеспечение
 icon: console
 subheader: Кафедра математического обеспечения и стандартизации ИТ
+links: system-software
+activeLinkIdx: 0
 ---
 
 #### 1. Загрузчик операционной системы. Определение и задачи.
@@ -296,3 +298,196 @@ Docker использует следующие основные простран
 3. Управление доступом к данным на энергонезависимых носителях (жёсткий диск, компакт-диск и т. д.), обычно с помощью файловой системы.
 4. Ведение файловой структуры: удаление, хранение, изменение и создание документов разных форматов.
 5. Пользовательский интерфейс: обеспечивает нормальное взаимодействие компьютера, его устройств, системы и пользователя.
+
+#### 31. Понятие операционной системы. Дополнительные функции операционной системы.
+
+Дополнительные функции операционной системы включают в себя:
+1. Многозадачность — возможность одновременного выполнения нескольких задач или программ.
+2. Взаимодействие между процессами — обмен данными и синхронизация между различными процессами, выполняемыми одновременно.
+3. Защита данных и программ — меры по обеспечению безопасности информации и предотвращению несанкционированного доступа.
+4. Разграничение прав доступа — определение уровней доступа пользователей к ресурсам системы.
+5. Многопользовательский режим работы — поддержка одновременной работы нескольких пользователей на одном компьютере.
+6. Аутентификация и авторизация — проверка подлинности пользователей и предоставление им соответствующих прав доступа.
+7. Выполнение задач в реальном времени — обработка задач с жесткими временными ограничениями.
+8. Поддержка сетевых технологий — обеспечение взаимодействия с другими компьютерами и сетями.
+
+#### 32. Понятие операционной системы. Область применения операционных систем.
+
+Операционные системы находят широкое применение в различных областях, где требуется управление аппаратными и программными ресурсами компьютера. Вот некоторые из основных областей применения:
+
+1. **Персональные компьютеры и ноутбуки**: Операционные системы, такие как Windows, macOS и Linux, используются на персональных компьютерах и ноутбуках для обеспечения удобства работы с приложениями, файлами и сетью.
+2. **Серверы и дата-центры**: Серверы и дата-центры используют операционные системы, такие как Linux, Windows Server, и различные дистрибутивы UNIX, для управления сетевыми ресурсами, хранения данных и обеспечения безопасности.
+3. **Мобильные устройства**: Операционные системы для мобильных устройств, такие как Android и iOS, управляют аппаратными ресурсами смартфонов и планшетов, обеспечивая работу приложений и доступ к интернету.
+4. **Встраиваемые системы**: Встроенные системы, используемые в бытовой технике, автомобилях, медицинском оборудовании и других устройствах, требуют специализированных операционных систем для управления ресурсами и обеспечения надежности.
+5. **Суперкомпьютеры и высокопроизводительные вычисления**: Операционные системы для суперкомпьютеров, такие как Linux и Unix, обеспечивают эффективное управление вычислительными ресурсами и параллельными задачами.
+6. **Облачные вычисления**: Облачные платформы, такие как Amazon Web Services, Google Cloud Platform и Microsoft Azure, используют операционные системы для управления виртуальными машинами и контейнерами, а также для обеспечения безопасности и доступности сервисов.
+7. **Интернет вещей (IoT)**: Операционные системы для IoT устройств, такие как Contiki и RIOT, предназначены для управления ограниченными ресурсами и обеспечения безопасности в сетях IoT.
+
+#### 33. Компоненты операционной системы.
+
+1. **Ядро** — центральный компонент ОС, обеспечивающий низкоуровневое управление аппаратными ресурсами. Оно отвечает за управление памятью, процессами, файлами и устройствами ввода-вывода.
+2. **Подсистема управления процессами** — отвечает за создание, выполнение, приостановку и завершение процессов. Включает в себя планировщик задач, который распределяет процессорное время между активными процессами.
+3. **Подсистема управления памятью** — обеспечивает эффективное распределение оперативной памяти между процессами и ядром ОС. Включает механизмы виртуальной памяти, страничной организации памяти и кэширования.
+4. **Подсистема управления файлами** — отвечает за организацию, хранение, доступ и управление файлами на различных носителях информации. Включает файловую систему, определяющую способ хранения и поиска данных на диске.
+5. **Подсистема управления вводом-выводом** — координирует доступ к устройствам ввода-вывода, таким как клавиатура, мышь, жесткие диски, сетевые адаптеры. Использует драйверы устройств для обеспечения абстракции и независимости от деталей работы устройств.
+6. **Подсистема безопасности** — обеспечивает защиту данных и ресурсов системы от несанкционированного доступа и вредоносного ПО. Включает механизмы аутентификации пользователей, управление доступом, шифрование и аудит.
+7. **Пользовательский интерфейс** — предоставляет средства для взаимодействия пользователя с компьютером. Может быть как текстовым (командная строка), так и графическим (графический интерфейс пользователя, GUI).
+8. **Система межпроцессного взаимодействия** — позволяет процессам обмениваться данными и сигналами, координируя свою работу. Включает различные механизмы, такие как семафоры, сообщения, сокеты и каналы.
+
+#### 34. Файловая система. Определение и задачи. Виды файловых систем.
+
+Файловая система — это порядок, определяющий способ организации, хранения и именования данных на носителях информации в компьютерах и других электронных устройствах. Она определяет формат содержимого и способ физического хранения информации, группируя данные в виде файлов. Основные задачи файловой системы включают:
+
+- Размещение и упорядочивание данных на носителе в виде файлов.
+- Определение максимально поддерживаемого объема данных на носителе информации.
+- Создание, чтение и удаление файлов.
+- Назначение и изменение атрибутов файлов (размер, время создания и изменения, владелец и создатель файла, доступен только для чтения, скрытый файл, временный файл, архивный, исполняемый, максимальная длина имени файла и т.п.).
+
+Виды файловых систем классифицируются по назначению и типу носителя информации:
+
+1. **Для носителей с произвольным доступом (например, жесткий диск):** FAT32, HPFS, ext2/ext3/ext4 и другие. Эти системы оптимизированы для быстрого доступа к данным и могут поддерживать большие объемы информации.
+2. **Для носителей с последовательным доступом (например, магнитные ленты):** QIC и другие. Предназначены для использования с устройствами, которые читают данные последовательно, например, стримеры.
+3. **Для оптических носителей:** ISO9660, HFS, UDF и другие. Оптимизированы для работы с компакт-дисками и DVD.
+4. **Виртуальные файловые системы:** AEFS и другие. Позволяют объединять несколько физических файловых систем в одну логическую.
+5. **Сетевые файловые системы:** NFS, CIFS, SSHFS, GmailFS и другие. Обеспечивают доступ к файлам через сеть.
+6. **Для флэш-памяти:** YAFFS, ExtremeFFS, exFAT, F2FS. Разработаны специально для использования с флэш-накопителями и SSD.
+7. **Специализированные файловые системы:** ZFS, VMware VMFS и другие. Имеют специфические функции, предназначенные для определенных задач или сред.
+
+#### 35. Файловая система. Определение и задачи. Одноуровневые и иерархические файловые системы.
+
+**Одноуровневая** файловая система представляет собой простейшую структуру, в которой все файлы и каталоги находятся на одном уровне. Это означает, что все файлы размещены непосредственно в корневом каталоге без вложенных папок. Такая структура подходит для небольших объемов данных и простых задач, когда не требуется сложная организация файлов.
+
+**Иерархическая** (многоуровневая) файловая система, напротив, позволяет организовать файлы и каталоги в древовидную структуру. Это дает возможность группировать файлы по категориям, облегчая их поиск и управление. Иерархическая структура позволяет создавать вложенные папки, что делает возможным более гибкую и эффективную организацию данных.В иерархической файловой системе файлы и каталоги могут быть вложены друг в друга, создавая многоуровневую структуру.
+
+#### 36. Лицензирование программного обеспечения. Проприетарное ПО. Особенности распространения и использования.
+
+**Проприетарное программное обеспечение (ПО)** – это тип программного обеспечения, права на которое принадлежат одному или нескольким правообладателям. Это означает, что пользователи не имеют права свободно модифицировать, распространять или использовать такое ПО без разрешения правообладателя.
+
+Особенности распространения и использования проприетарного ПО:
+
+1. **Лицензия.** Проприетарное ПО распространяется на условиях лицензии, которая определяет права и обязанности пользователя. Лицензия может ограничивать использование ПО определенными целями, запрещать модификацию исходного кода, требовать уплаты лицензионных отчислений и т.д.
+2. **Платное использование.** Большинство проприетарного ПО является платным. Пользователи должны приобрести лицензию на использование ПО у правообладателя.
+3. **Ограничения на распространение.** Правообладатель может ограничивать распространение ПО, запрещая его копирование, установку на другие компьютеры или продажу.
+4. **Техническая поддержка.** Правообладатели часто предоставляют техническую поддержку своим пользователям, но эта услуга может быть платной.
+5. **Обновления и исправления.** Правообладатели могут выпускать обновления и исправления к ПО, которые пользователи должны устанавливать для поддержания работоспособности программы.
+6. **Соблюдение условий лицензии.** Пользователи обязаны соблюдать условия лицензии, иначе они могут столкнуться с юридическими последствиями.
+7. **Защита авторских прав.** Правообладатели могут защищать свои авторские права на ПО, включая запрет на обратное проектирование, модификацию исходного кода и распространение ПО без лицензии.
+
+#### 37. Лицензирование программного обеспечения. Свободное ПО. Особенности распространения и использования.
+
+**Свободное программное обеспечение (СПО)** отличается от проприетарного тем, что пользователи имеют право свободно использовать, изучать, изменять и распространять его. Это возможно благодаря лицензиям, которые определяют условия использования СПО.
+
+Особенности распространения и использования свободного ПО:
+
+1. **Свобода использования.** Пользователи могут использовать СПО для любых целей, включая коммерческое использование.
+2. **Свобода изучения.** Пользователи могут изучать исходный код СПО, чтобы понять, как оно работает, и вносить изменения в соответствии со своими потребностями.
+3. **Свобода распространения.** Пользователи могут свободно распространять копии СПО вместе с исходным кодом или без него.
+4. **Свобода модификации.** Пользователи могут модифицировать исходный код СПО и создавать на его основе новые программы.
+5. **Отсутствие лицензионных отчислений.** Пользователям не нужно платить за использование, изучение, распространение или модификацию СПО.
+6. **Открытый исходный код.** Исходный код СПО доступен всем желающим, что позволяет другим разработчикам улучшать программу и создавать на её основе новые проекты.
+7. **Сообщество разработчиков.** Вокруг СПО часто формируется активное сообщество разработчиков, которые помогают друг другу решать проблемы и обмениваться опытом.
+8. **Отсутствие гарантий.** Поскольку СПО распространяется бесплатно, пользователи не получают гарантий от разработчиков.
+
+#### 38. Лицензирование программного обеспечения. Лицензия GNU GPL.
+
+**GNU General Public License (GPL)** — это лицензия на свободное программное обеспечение, созданная в рамках проекта GNU в 1988 году. Её цель — предоставить пользователю права копировать, модифицировать и распространять программы, а также гарантировать, что и пользователи всех производных программ получат вышеперечисленные права.
+
+Особенности лицензии GNU GPL:
+
+- **Свобода использования.** Пользователи могут использовать программу для любых целей, включая коммерческое использование.
+- **Свобода изучения.** Пользователи могут изучать исходный код программы, чтобы понять, как она работает, и вносить изменения в соответствии со своими потребностями.
+- **Свобода распространения.** Пользователи могут свободно распространять копии программы вместе с исходным кодом или без него.
+- **Свобода модификации.** Пользователи могут модифицировать исходный код программы и создавать на его основе новые программы.
+- **Отсутствие лицензионных отчислений.** Пользователям не нужно платить за использование, изучение, распространение или модификацию программы.
+- **Открытый исходный код.** Исходный код программы доступен всем желающим, что позволяет другим разработчикам улучшать программу и создавать на её основе новые проекты.
+- **Наследование прав.** Если программа является производной от программы под лицензией GNU GPL, то производная программа также должна распространяться под лицензией GNU GPL.
+
+Лицензия GNU GPL применяется к большому количеству программного обеспечения, включая операционные системы, веб-серверы, компиляторы и многие другие программы.
+
+#### 39. Стандарт POSIX. Задачи стандарта POSIX.
+
+Стандарт POSIX (Portable Operating System Interface) был разработан для обеспечения совместимости и переносимости прикладных программ между различными UNIX-подобными операционными системами. Он определяет набор интерфейсов операционной системы, которые должны поддерживаться для соответствия стандарту.
+
+**Задачи стандарта POSIX включают:**
+
+1. **Содействие переносу кода прикладных программ.** Стандарт обеспечивает совместимость на уровне исходного кода, что упрощает перенос программ между разными платформами.
+2. **Определение и унификация интерфейсов.** Стандарт устанавливает четкие правила и рекомендации для разработки интерфейсов операционной системы, что способствует их единообразному использованию.
+3. **Поддержка существующих приложений.** POSIX стремится сохранить и учесть существующие приложения, обеспечивая их совместимость с новыми версиями операционных систем.
+4. **Развитие стандартов в направлении обеспечения коммуникационных сетей, распределенной обработки данных и защиты информации.** Стандарт постоянно развивается, охватывая новые области и технологии.
+5. **Рекомендация ограничения использования бинарного (объектного) кода для приложений в простых системах.** Это направлено на повышение переносимости и открытости программного обеспечения.
+
+#### 40. Реализация графического интерфейса в ОС Linux. Сервер Х.11.
+
+В Linux, реализация графического интерфейса пользователя (GUI) базируется на архитектуре X Window System, которая использует сервер X.11 для управления окнами, графикой и вводом с клавиатуры и мыши. X.11 - это сетевой протокол, который позволяет программам, работающим на разных компьютерах в сети, взаимодействовать с графическим интерфейсом пользователя.
+
+###### Основные компоненты архитектуры X Window System:
+
+- **Клиентские приложения (X clients)** - это программы, которые используют графический интерфейс пользователя. Они отправляют запросы на сервер X.11 для отображения окон, рисования графики и обработки ввода.
+- **Сервер X.11** - это программа, которая управляет графическим интерфейсом пользователя. Она принимает запросы от клиентских приложений и выполняет их, отображая окна, обрабатывая ввод и управляя графикой.
+- **Дисплеи** - это устройства вывода, на которых отображаются окна и графика. Дисплеи могут быть подключены к компьютеру напрямую или через сеть.
+
+###### Как работает X Window System:
+
+1. Клиентское приложение отправляет запрос на сервер X.11.
+2. Сервер X.11 обрабатывает запрос и отправляет ответ клиентскому приложению.
+3. Клиентское приложение отображает результат на дисплее.
+
+###### Преимущества X Window System:
+
+- **Переносимость.** X Window System позволяет запускать одни и те же клиентские приложения на разных платформах.
+- **Масштабируемость.** X Window System может обрабатывать большое количество клиентских приложений одновременно.
+- **Безопасность.** X Window System обеспечивает защиту от несанкционированного доступа к графическому интерфейсу пользователя.
+
+X Window System является основой для многих современных графических интерфейсов пользователя в Linux. Он используется в таких средах рабочего стола, как Gnome, KDE и XFCE.
+
+#### 41. Конфигурационное управление. Процедуры управления конфигурацией.
+
+1. **Ревизия конфигурации** – процесс проверки соответствия документа нижнего уровня всем требованиям верхнего. Это позволяет убедиться, что изменения в одном документе не нарушают требования других документов.
+2. **Аудит конфигурации** – процесс проверки соответствия готового продукта или его части документации. Аудит гарантирует, что продукт соответствует требованиям и спецификациям.
+3. **Контроль конфигурации** – процесс, при котором все предлагаемые изменения продукта проходят одобрение специальной группы (или отдельного человека). Это обеспечивает контроль над актуальностью всех имеющихся документов и контроль того, что все изменения сначала вносятся в документацию, а уже затем в объект изменения.
+4. **Учет состояния конфигурации** – процесс подготовки отчетов о текущем состоянии продукта и состоянии утвержденных изменений. Это помогает отслеживать ход разработки и выявлять потенциальные проблемы.
+
+#### 42. Методология DevOps. Основные положения.
+
+Методология DevOps объединяет разработку (Development) и операции (Operations) для ускорения и упрощения процесса выпуска программного обеспечения. Основные положения DevOps включают:
+
+1. **Интеграция разработки и операций**: Размытие границ между командами разработчиков и операционными специалистами, что способствует лучшему пониманию потребностей друг друга и более эффективному взаимодействию.
+2. **Автоматизация**: Использование инструментов и практик для автоматизации различных этапов разработки и эксплуатации, начиная от тестирования и заканчивая развертыванием приложений. Это уменьшает вероятность человеческих ошибок и ускоряет процесс выпуска.
+3. **Непрерывная интеграция и доставка (CI/CD)**: Практики, направленные на частое и надежное обновление программного обеспечения. CI подразумевает автоматическую сборку и тестирование кода после каждого изменения, а CD отвечает за автоматизацию процесса развертывания новых версий приложений.
+4. **Мониторинг и логирование**: Постоянное отслеживание состояния системы и приложений, а также сбор и анализ логов для выявления и устранения проблем.
+5. **Инфраструктура как код (IaC)**: Управление инфраструктурой через код, что обеспечивает легкость масштабирования, воспроизводимость и возможность быстрого развертывания.
+6. **Культура сотрудничества и обмена знаниями**: Создание культуры, в которой обмен знаниями и сотрудничество между командами являются нормой, что способствует быстрому решению возникающих проблем и улучшению качества продукта.
+
+DevOps направлен на сокращение времени между внесением изменений в код и их выпуском в продакшн, что в свою очередь ведет к повышению удовлетворенности клиентов и снижению затрат на разработку и поддержку.
+
+#### 43. Основы микросервисной архитектуры. Определение. Принципы проектирования.
+
+**Микросервисная архитектура** — это подход к разработке программного обеспечения, при котором приложение разбивается на небольшие, автономные сервисы, каждый из которых решает конкретную бизнес-задачу. Эти сервисы могут быть развернуты, масштабированы и обновлены независимо друг от друга.
+
+Принципы проектирования микросервисной архитектуры включают:
+
+1. **Независимость сервисов**: Каждый сервис должен быть независимым от других сервисов, чтобы обеспечить гибкость и возможность масштабирования.
+2. **Слабая связанность**: Сервисы должны быть слабо связаны между собой, чтобы изменения в одном сервисе не влияли на другие.
+3. **Автоматизация развертывания и масштабирования**: Использование средств автоматизации для развертывания и масштабирования микросервисов, таких как контейнеризация с помощью Docker и управление контейнерами с Kubernetes.
+4. **Мониторинг и логирование**: Активное мониторирование работы всех микросервисов и сбор данных о производительности и доступности.
+5. **Обеспечение безопасности**: Каждый микросервис должен иметь стратегию безопасности, включая аутентификацию и авторизацию.
+6. **Четкое определение границ сервисов**: Каждый микросервис должен решать одну конкретную задачу, что помогает сделать архитектуру более гибкой и поддерживаемой.
+7. **Использование API Gateway**: API Gateway обеспечивает единую точку входа для клиентов приложения и управляет запросами к различным микросервисам.
+
+#### 44. Основы микросервисной архитектуры. Определение. Преимущества и недостатки.
+
+###### Преимущества микросервисной архитектуры:
+
+1. **Гибкость и масштабируемость**: Микросервисы позволяют быстро вносить изменения в отдельные части приложения, не затрагивая всю систему. Это упрощает процесс разработки и обновления программного обеспечения.
+2. **Отказоустойчивость**: Если один микросервис выходит из строя, это не приводит к сбою всего приложения, поскольку остальные микросервисы продолжают работать.
+3. **Возможность использования различных технологий**: Микросервисы могут быть написаны на разных языках программирования и использовать разные технологии, что позволяет разработчикам выбирать наиболее подходящие инструменты для каждой конкретной задачи.
+4. **Легкость развертывания**: Микросервисы могут быть развернуты независимо друг от друга, что упрощает процесс обновления и обслуживания приложения.
+5. **Улучшенное управление версиями**: Изменения в одном микросервисе не влияют на другие, что упрощает управление версиями и снижает риски конфликтов.
+
+###### Недостатки микросервисной архитектуры:
+
+1. **Сложность управления**: Большое количество микросервисов может усложнить процесс управления и мониторинга приложения.
+2. **Необходимость в дополнительных инструментах**: Для эффективной работы микросервисной архитектуры требуется использование специализированных инструментов и платформ.
+3. **Увеличение нагрузки на сеть**: Взаимодействие между микросервисами может привести к увеличению нагрузки на сетевую инфраструктуру.
+4. **Риск несогласованности данных**: Если микросервисы не синхронизированы, это может привести к несогласованности данных.
+5. **Дополнительные затраты на разработку**: Разработка микросервисной архитектуры требует больше времени и ресурсов, чем разработка монолитного приложения.
