--- a/src/pages/python/theory.mdx
+++ b/src/pages/python/theory.mdx
@@ -9,3 +9,131 @@ subheader: кафедра корпоративных ИС
 [решить 12 задач](https://github.com/k0ndrateff/mirea_python)
 из ЦАП.
 
+
+#### 1. Реализовать функцию:
+
+$$
+f(z) = 70 (z^3 + z)^3 - \frac{\frac{\log_2^7 z}{33} - 62 (\frac{z^2}{31})^6}{(82-95z^3 - \frac{z}{71})^2}
+$$
+
+*Примеры результатов вычислений:*
+
+```python
+main(0.01) == 2.58e+00
+main(0.1) == 9.23e-02
+main(0.16) == 3.13e-01
+main(0.19) == 5.36e-01
+main(0.09) == 7.98e-02
+```
+
+*Решение:*
+
+```python
+import log from math
+
+def main(z):
+	diminutive = 70 * (z ** 3 + z) ** 3
+	divisible = ((log(2, z) ** 7) / 33) - 62 * ((z ** 2) / 31) ** 6
+	divisor = (82 - 95 * z ** 3 - (z / 71)) ** 2
+	return diminutive - (divisible / divisor)
+```
+
+#### 2. Реализовать кусочную функцию:
+
+$$
+f(x) = \begin{cases}
+x + x^4 + 23(76 - 10x^3)^6, \hspace{0.4cm}x<1\\
+40(|x|)^5, \hspace{3.8cm}1\le x < 63\\
+\frac{x^5}{6} - 59, \hspace{3.8cm} x \ge 63
+\end{cases}
+$$
+
+*Примеры результатов вычислений:*
+
+```python
+main(93) == 1.16e+09
+main(-17) == 2.76e+29
+main(124) == 4.89e+09
+main(-10) == 1.43e+25
+main(92) == 1.10e+09
+```
+
+*Решение:*
+
+```python
+def main(x):
+	if x < 1:
+		return x + x ** 4 + 23 * (76 - 10 * x ** 3) ** 6
+	elif x < 63:
+		return 40 * (abs(x)) ** 5
+	else:
+		return x ** 5 / 6 - 59
+```
+
+
+#### 3. Реализовать итерационную функцию:
+
+$$
+f(m, a, n) = \sum_{i=1}^{n} \prod_{j=1}^{a} \sum_{k=1}^{m} \biggl( (22i^3 - 9j - k^2)^7 - j^5 \biggr)
+$$
+
+*Примеры результатов вычислений:*
+
+```python
+main(8, 2, 8) == 3.24e+58
+main(5, 2, 6) == 6.97e+52
+main(7, 2, 8) == 2.50e+58
+main(5, 8, 2) == 8.45e+122
+main(8, 4, 2) == 2.12e+63
+```
+
+*Решение:*
+
+```python
+def main(m, a, n):
+	sumn = 0
+
+	for i in range(1, n):
+		proda = 1
+
+		for j in range(1, a):
+			summ = 0
+
+			for k in range(1, m):
+				summ += (22 * i ** 3 - 9 * j - k ** 2) - j ** 5
+
+			proda *= summ
+		sumn += proda
+	return sumn
+```
+
+#### 4. Реализовать функцию по рекуррентной формуле:
+
+$$
+f_n = \begin{cases}
+0.51, \hspace{4.05cm}n=0\\
+f_{n-1}^3 + 1 + f_{n-1} - f_{n-1}^3, \hspace{0.2cm}n \ge 1
+\end{cases}
+$$
+
+*Примеры результатов вычислений:*
+
+```python
+main(3) == 3.51e+00
+main(1) == 1.51e+00
+main(4) == 4.51e+00
+main(2) == 2.51e+00
+main(8) == 8.51e+00
+```
+
+*Решение:*
+
+```python
+def main(n):
+	if n == 0:
+		return 0.51
+	else:
+		return main(n-1) ** 3 + 1 + f(n-1) - f(n-1) ** 3
+```
+
+
